--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -2,7 +2,7 @@
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-<form action="{% url 'account:login' %}" method="post">
+<form action="{% url 'account:login' %}{{args}}" method="post">
 {% csrf_token %}
     <input type="text" name="username" required>
     <input type="password" name="password" required><br>
