--- a/account/templates/account/reset_email.html
+++ b/account/templates/account/reset_email.html
@@ -1,12 +1,7 @@
-{% autoescape off %}
-To initiate the password reset process for your {{ user.get_username }} Dashboard Account,
-click the link below:
-
-{{ protocol }}://{{ domain }}{% url 'account:password_change' uidb64=uid token=token %}
-
-If clicking the link above doesn't work, please copy and paste the URL in a new browser
-window instead.
-
-Sincerely,
+To initiate the password reset process for your {{ user.get_username }} Dashboard Account,<br>
+click the link below:<br><br>
+{{ protocol }}://{{ domain }}{% url 'account:password_change' uidb64=uid token=token %}<br><br>
+If clicking the link above doesn't work, please copy and paste the URL in a new browser<br>
+window instead.<br><br>
+Sincerely,<br>
 The Dashboard Team
-{% endautoescape %}
