--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -1,1 +1,9 @@
-hsda
+<h1>SignUP Form</h1>
+
+{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Login">
+</form>
