--- a/account/templates/account/reset_email.html
+++ b/account/templates/account/reset_email.html
@@ -3,5 +3,6 @@ click the link below:<br><br>
 {{ protocol }}://{{ domain }}{% url 'account:password_change' uidb64=uid token=token %}<br><br>
 If clicking the link above doesn't work, please copy and paste the URL in a new browser<br>
 window instead.<br><br>
+Pls, Do not reply to this mail.<br>
 Sincerely,<br>
 The Dashboard Team
