--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -1,9 +1,30 @@
 <h1>SignUP Form</h1>
 
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+
 
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Login">
+    <p>
+        <label for="id_username">Entry Number:</label>
+        <input type="text" name="username" maxlength="150" autocapitalize="none" autocomplete="username" autofocus required id="id_username">
+    </p>
+    <p>
+        <label for="id_password1">Password:</label>
+        <input type="password" name="password1" autocomplete="new-password" required id="id_password1">
+        <span class="helptext">
+            <ul>
+                <li>Your password can’t be too similar to your other personal information.</li>
+                <li>Your password must contain at least 8 characters.</li>
+                <li>Your password can’t be a commonly used password.</li>
+                <li>Your password can’t be entirely numeric.</li>
+            </ul>
+        </span>
+    </p>
+    <p>
+        <label for="id_password2">Password confirmation:</label>
+        <input type="password" name="password2" autocomplete="new-password" required id="id_password2">
+        <span class="helptext">Enter the same password as before, for verification.</span>
+    </p>
+    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+    <input type="submit" value="Create">
 </form>
