--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -1,7 +1,4 @@
 <h1>SignUP Form</h1>
-
-
-
 <form method="post">
     {% csrf_token %}
     <p>
@@ -9,21 +6,32 @@
         <input type="text" name="username" maxlength="150" autocapitalize="none" autocomplete="username" autofocus required id="id_username">
     </p>
     <p>
-        <label for="id_password1">Password:</label>
-        <input type="password" name="password1" autocomplete="new-password" required id="id_password1">
-        <span class="helptext">
-            <ul>
-                <li>Your password can’t be too similar to your other personal information.</li>
-                <li>Your password must contain at least 8 characters.</li>
-                <li>Your password can’t be a commonly used password.</li>
-                <li>Your password can’t be entirely numeric.</li>
-            </ul>
-        </span>
+        <label for="id_fname">First Name:</label>
+        <input type="text" name="fname" maxlength="150" autocapitalize="none" autocomplete="username" autofocus required id="id_fname">
+        <br><br>
+        <label for="id_lname">Last Name:</label>
+        <input type="text" name="lname" maxlength="150" autocapitalize="none" autocomplete="username" autofocus id="id_lname">
     </p>
     <p>
+        <label for="gender">Gender:</label>
+        <select name="gender" id="gender">
+            <option value="" disabled selected>Select</option>
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
+            <option value="Others">Others</option>
+        </select> 
+    </p>
+    <p>
+        <label for="id_password1">Password:</label>
+        <input type="password" name="password1" autocomplete="new-password" required id="id_password1">
+        <br><br>
         <label for="id_password2">Password confirmation:</label>
         <input type="password" name="password2" autocomplete="new-password" required id="id_password2">
-        <span class="helptext">Enter the same password as before, for verification.</span>
+        <span class="helptext">
+            <ul>
+                <li>Your password must contain at least 8 characters.</li>
+            </ul>
+        </span>
     </p>
     {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
     <input type="submit" value="Create">
