login and otp ui

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,10 +1,104 @@
-<h1>Login Form</h1>
+{% load static %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <title>Login</title>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="{% static 'css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+        <link href="{% static 'css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+        <link href="{% static 'css/form.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+    </head>
+    <body>
+        <div class="valign-wrapper" style="height: 100vh;">
+            <div class="container valign-wrapper" style="height: 90vh;">
+                <div class="row" id="form" style="margin-bottom: 0;">
+                    <div class="col m12 l4 offset-l1 form-image" style="padding: 0;" >
+                        <div id="layer" class="left-align">
+                            <h5>LogIn</h5><br>
+                            <h6>Enjoy more options, Login to your Existing Dashboard Account.</h6>
+                            <h6>Enter your credentials</h6>
+                            <div class="hide-on-large-only" id="mobile">
+                                <form class="col s12" method="POST">
+                                    {% csrf_token %}
+                                    <div class="row">
+                                        <div class="input-field col s12">
+                                            <i class="material-icons prefix" style="color: white;">account_circle</i>
+                                            <input type="text" name="username" maxlength="150"  required id="id_username">
+                                            <label for="id_username">Entry Number:</label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="input-field col s12">
+                                            <i class="material-icons prefix" style="color: white;">security</i>
+                                            <label for="id_password">Password:</label>
+                                            <input type="password" name="password" autocomplete="password" required id="id_password">
+                                        </div>
+                                    </div>
+                                    
+                                    <div class="row">
+                                      <div class="col s12">
+                                        <div class="input-field inline">
+                                            {% if error_message %}<p><strong class="orange-text" >{{ error_message }}</strong></p>{% endif %}
+                                        </div>
+                                      </div>
+                                    </div>
+                                    <div class="row center" >
+                                        <button class="btn-small waves-effect waves-light blue accent-4">Login</button>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="cont-bottom center-align">
+                                <h6>Don`t have an Account? <a href="{% url 'account:create' %}"><b>SignUp</b></a> </h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col m12 l6 pink lighten-5 valign-wrapper hide-on-med-and-down" style="color: black; height: 100%; position: relative; padding: 0;" id="desktop">
+                        <div class="pink" style=" width: 100%; height: 5px; position: absolute; top: 0; display: inline-block;"></div>
+                        <div>
+                            <form class="col s12" method="POST">
+                                {% csrf_token %}
+                                <div class="row">
+                                    <div class="input-field col s12">
+                                        <i class="material-icons prefix" style="color: black;">account_circle</i>
+                                        <input type="text" name="username" maxlength="150"  required id="id_username">
+                                        <label for="id_username">Entry Number:</label>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="input-field col s12">
+                                        <i class="material-icons prefix" style="color: black;">security</i>
+                                        <label for="id_password">Password:</label>
+                                        <input type="password" name="password" autocomplete="password" required id="id_password">
+                                    </div>
+                                </div>
+                                
+                                <div class="row">
+                                  <div class="col s12">
+                                    <div class="input-field inline">
+                                        {% if error_message %}<p><strong class="red-text">{{ error_message }}</strong></p>{% endif %}
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="row center" >
+                                    <button class="btn-large waves-effect waves-light blue accent-4">Login</button>
+                                </div>
+                            </form>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+          <!--  Scripts-->
+            <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+            <script src="{% static 'js/materialize.js' %}"></script>
+            <script>
+                $(document).ready(function(){
+                    $('select').formSelect();
+                });
+            </script>
 
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-
-<form action="{% url 'account:login' %}{{args}}" method="post">
-{% csrf_token %}
-    <input type="text" name="username" required>
-    <input type="password" name="password" required><br>
-<input type="submit" value="Login">
-</form>
+    </body>
+</html>
