--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -65,7 +65,7 @@
                                     <div class="row">
                                       <div class="col s12">
                                         <div class="input-field inline">
-                                            {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+                                            {% if error_message %}<p><strong class="orange-text" >{{ error_message }}</strong></p>{% endif %}
                                         </div>
                                       </div>
                                     </div>
@@ -127,7 +127,7 @@
                                 <div class="row">
                                   <div class="col s12">
                                     <div class="input-field inline">
-                                        {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+                                        {% if error_message %}<p><strong class="red-text">{{ error_message }}</strong></p>{% endif %}
                                     </div>
                                   </div>
                                 </div>
@@ -141,8 +141,6 @@
                 </div>
             </div>
         </div>
-          
-        
           <!--  Scripts-->
             <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
             <script src="{% static 'js/materialize.js' %}"></script>
@@ -154,43 +152,3 @@
 
     </body>
 </html>
-<!--
-<h1>SignUP Form</h1>
-<form method="post">
-                            {% csrf_token %}
-                            <p>
-                                <label for="id_username">Entry Number:</label>
-                                <input type="text" name="username" maxlength="150" autocapitalize="none" autocomplete="username" autofocus required id="id_username">
-                            </p>
-                            <p>
-                                <label for="id_fname">First Name:</label>
-                                <input type="text" name="fname" maxlength="150" autocapitalize="none" autocomplete="username" autofocus required id="id_fname">
-
-                                <label for="id_lname">Last Name:</label>
-                                <input type="text" name="lname" maxlength="150" autocapitalize="none" autocomplete="username" autofocus id="id_lname">
-                            </p>
-                            <p>
-                                <label for="gender">Gender:</label>
-                                <select name="gender" id="gender">
-                                    <option value="" disabled selected>Select</option>
-                                    <option value="Male">Male</option>
-                                    <option value="Female">Female</option>
-                                    <option value="Others">Others</option>
-                                </select> 
-                            </p>
-                            <p>
-                                <label for="id_password1">Password:</label>
-                                <input type="password" name="password1" autocomplete="new-password" required id="id_password1">
-                                <br><br>
-                                <label for="id_password2">Password confirmation:</label>
-                                <input type="password" name="password2" autocomplete="new-password" required id="id_password2">
-                                <span class="helptext">
-                                    <ul>
-                                        <li>Your password must contain at least 8 characters.</li>
-                                    </ul>
-                                </span>
-                            </p>
-                            {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-                            <input type="submit" value="Create">
-                        </form>
--->
