--- a/account/templates/account/signup_otp.html
+++ b/account/templates/account/signup_otp.html
@@ -1,3 +1,106 @@
+{% load static %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <title>SignUP</title>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="{% static 'css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+        <link href="{% static 'css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+        <link href="{% static 'css/form.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+    </head>
+    <body>
+        <div class="valign-wrapper" style="height: 100vh;">
+            <div class="container valign-wrapper" style="height: 90vh;">
+                <div class="row" id="form" style="margin-bottom: 0;">
+                    <div class="col m12 l4 offset-l1 form-image" style="padding: 0;" >
+                        <div id="layer" class="left-align">
+                            <h5>SignUP</h5><br>
+                            <h6>This application is much better when you have an account</h6>
+                            <h6>Get Yourself One</h6>
+                            <div class="hide-on-large-only" id="mobile">
+                                <form class="col s12" method="POST">
+                                    {% csrf_token %}
+                                    <div class="row">
+                                        <div class="input-field col s12">
+                                            <i class="material-icons prefix" style="color: white;">textsms</i>
+                                            <label for="mid_verf">Verification Code:</label>
+                                            <input type="text" name="verf_code" maxlength="150" autocapitalize="none" required id="mid_verf">
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col s12">
+                                            <span class="helptext">Enter the 8 digit alpha-numeric verification code sent on your IIT Jammu Email ID.</span>
+                                        </div>
+                                    </div>                          
+                                    <div class="row">
+                                      <div class="col s12">
+                                        <div class="input-field inline">
+                                            {% if error_message %}<p><strong class="orange-text">{{ error_message }}</strong></p>{% endif %}
+                                        </div>
+                                      </div>
+                                    </div>
+                                    <div class="row center" >
+                                        <button class="btn-small waves-effect waves-light blue accent-4">Verify</button>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="cont-bottom center-align">
+                                <h6>Already have an Account? <a href="{% url 'account:login' %}"><b>Log IN</b></a> </h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col m12 l6 pink lighten-5 valign-wrapper hide-on-med-and-down" style="color: black; height: 100%; position: relative; padding: 0;" id="desktop">
+                        <div class="pink" style=" width: 100%; height: 5px; position: absolute; top: 0; display: inline-block;"></div>
+                        <div>
+                            <form class="col s12" method="POST">
+                                {% csrf_token %}
+                                <div class="row">
+                                    <div class="input-field col s12">
+                                        <i class="material-icons prefix" style="color: black;">textsms</i>
+                                        <label for="id_verf">Verification Code:</label>
+                                        <input type="text" name="verf_code" maxlength="150" autocapitalize="none" required id="id_verf">
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col s12">
+                                        <span class="helptext black-text">Enter the 8 digit alpha-numeric verification code sent on your IIT Jammu Email ID.</span>
+                                    </div>
+                                </div>                          
+                                <div class="row">
+                                  <div class="col s12">
+                                    <div class="input-field inline">
+                                        {% if error_message %}<p><strong class="red-text">{{ error_message }}</strong></p>{% endif %}
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="row center" >
+                                    <button class="btn-large waves-effect waves-light blue accent-4">Verify</button>
+                                </div>
+                            </form>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+          
+        
+          <!--  Scripts-->
+            <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+            <script src="{% static 'js/materialize.js' %}"></script>
+            <script>
+                $(document).ready(function(){
+                    $('select').formSelect();
+                });
+            </script>
+
+    </body>
+</html>
+
+
+<!--
 <h1>SignUP Form</h1>
 
 <form method="post">
@@ -10,4 +113,4 @@
     </p>
     {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
     <input type="submit" value="Validate">
-</form>
+</form>-->
