--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -7,7 +7,6 @@
         <title>Login</title>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="{% static 'css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
-        <link href="{% static 'css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
         <link href="{% static 'css/form.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
     </head>
     <body>
@@ -25,15 +24,15 @@
                                     <div class="row">
                                         <div class="input-field col s12">
                                             <i class="material-icons prefix" style="color: white;">account_circle</i>
-                                            <input type="text" name="username" maxlength="150"  required id="id_username">
-                                            <label for="id_username">Entry Number:</label>
+                                            <input type="text" name="username" maxlength="150"  required id="mid_username">
+                                            <label for="mid_username">Entry Number:</label>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="input-field col s12">
                                             <i class="material-icons prefix" style="color: white;">security</i>
-                                            <label for="id_password">Password:</label>
-                                            <input type="password" name="password" autocomplete="password" required id="id_password">
+                                            <label for="mid_password">Password:</label>
+                                            <input type="password" name="password" autocomplete="password" required id="mid_password">
                                         </div>
                                     </div>
                                     
