--- a/account/templates/account/forget_password.html
+++ b/account/templates/account/forget_password.html
@@ -1,10 +1,62 @@
-<h1>Password reset</h1>
-<p>Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.</p>
-  <form action="" method="post">
-  {% csrf_token %}
-  {% if form.email.errors %}
-    {{ form.email.errors }}
-  {% endif %}
-      <p>{{ form.email }}</p> 
-    <input type="submit" class="btn btn-default btn-lg" value="Reset password">
-  </form>
+{% load static %}
+<!DOCTYPE html>
+<html>
+  <head>
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1"/>
+      <title>Forget</title>
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="{% static 'css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+      <link href="{% static 'css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+      <style>
+        .row::after{
+          content: inherit;
+        }
+      </style>
+  </head>
+  <body>
+    <div class="valign-wrapper" style="height: 100vh;">
+      <div class="container valign-wrapper" style="height: 90vh;">
+        <div class="row" style="margin-bottom: 0;">
+          <div class="col m12 pink lighten-5 valign-wrapper" style="color: black; height: 100%; position: relative; padding: 0;" id="desktop">
+            <div class="pink" style=" width: 100%; height: 5px; position: absolute; top: 0; display: inline-block;"></div>
+            <div style="padding: 20px;">
+              <h3>Password reset</h3>
+              <p>Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.</p>
+              <form class="col s12" method="POST">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix" style="color: black;">email</i>
+                        <input type="email" name="email" autocomplete="email" maxlength="254" required id="id_email">
+                        <label for="id_email">Email Id:</label>
+                    </div>
+                </div>
+                <div class="row">
+                  <div class="col s12">
+                    <div class="input-field inline">
+                      {% if form.email.errors %}
+                      <p><strong class="red-text">{{ form.email.errors }}</strong></p>
+                      {% endif %}
+                    </div>
+                  </div>
+                </div>
+                <div class="row center" >
+                  <button class="btn-small waves-effect waves-light blue accent-4">Reset Password</button>
+                </div>
+              </form>
+            </div>       
+          </div>
+        </div>
+      </div>
+    </div>
+          <!--  Scripts-->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="{% static 'js/materialize.js' %}"></script>
+    <script>
+        $(document).ready(function(){
+            $('select').formSelect();
+        });
+    </script>
+  </body>
+</html>
