--- a/account/templates/account/reset_done.html
+++ b/account/templates/account/reset_done.html
@@ -1,5 +1,40 @@
-{% block content %}
-  <p>
-    Your password has been set. You may go ahead and <a href="{{login_url}}">sign in</a> now.
-  </p>
-{% endblock %}
+{% load static %}
+<!DOCTYPE html>
+<html>
+  <head>
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1"/>
+      <title>Password Changed</title>
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="{% static 'css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+      <link href="{% static 'css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+  </head>
+  <body>
+    <div class="valign-wrapper" style="height: 100vh;">
+      <div class="container valign-wrapper" style="height: 90vh;">
+        <div class="row" style="margin-bottom: 0;">
+          <div class="col m12 pink lighten-5 valign-wrapper" style="color: black; height: 100%; position: relative; padding: 0;" id="desktop">
+            <div class="pink" style=" width: 100%; height: 5px; position: absolute; top: 0; display: inline-block;"></div>
+            <div style="padding: 20px;">
+              <h3>Password reset</h3>
+              <p>
+                Your password has been set. You may go ahead and <a href="{{login_url}}">Log in</a> now.
+              </p>
+              <div class="row center" >
+                <a href="{% url 'account:login' %}" class="btn-small waves-effect waves-light blue accent-4">LogIn</a>
+              </div>
+            </div>       
+          </div>
+        </div>
+      </div>
+    </div>
+          <!--  Scripts-->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="{% static 'js/materialize.js' %}"></script>
+    <script>
+        $(document).ready(function(){
+            $('select').formSelect();
+        });
+    </script>
+  </body>
+</html>
