--- a/account/templates/account/reset_link.html
+++ b/account/templates/account/reset_link.html
@@ -1,15 +1,63 @@
-{% block content %}
-  {% if validlink %}
-    <h3>Change password</h3>
-    <form method="post">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit">Change password</button>
-    </form>
-  {% else %}
-    <p>
-      The password reset link was invalid, possibly because it has already been used.
-      Please request a new password reset.
-    </p>
-  {% endif %}
-{% endblock %}
+{% load static %}
+<!DOCTYPE html>
+<html>
+  <head>
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1"/>
+      <title>New Password</title>
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="{% static 'css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+      <link href="{% static 'css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+      <style>
+        .row::after{
+          content: inherit;
+        }
+      </style>
+  </head>
+  <body>
+    <div class="valign-wrapper" style="height: 100vh;">
+      <div class="container valign-wrapper" style="height: 90vh;">
+        <div class="row" style="margin-bottom: 0;">
+          <div class="col m12 pink lighten-5 valign-wrapper" style="color: black; height: 100%; position: relative; padding: 0;" id="desktop">
+            <div class="pink" style=" width: 100%; height: 5px; position: absolute; top: 0; display: inline-block;"></div>
+            <div style="padding: 20px;">
+              {% if validlink %}
+              <h3>Change password</h3>
+              <form class="col s12" method="POST">
+                {% csrf_token %}
+                {% for field in form %}
+                <div class="row">
+                  <div class="input-field col s12">
+                    <label for="{{ field.id_for_label }}">{{field.label}}</label>
+                    <input id="{{ field.id_for_label }}" maxlength="30" name="{{ field.html_name }}" type="password" required />
+                    {% if field.errors %}
+                      <p><strong class="red-text">{{ field.errors }}</strong></p>
+                    {% endif %}
+                  </div>
+                </div>
+                {% endfor %}
+                <div class="row center" >
+                  <button class="btn-small waves-effect waves-light blue accent-4">Reset Password</button>
+                </div>
+              </form>
+              {% else %}
+                <p>
+                  The password reset link was invalid, possibly because it has already been used.
+                  Please request a new password reset.
+                </p>
+              {% endif %}
+            </div>       
+          </div>
+        </div>
+      </div>
+    </div>
+          <!--  Scripts-->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="{% static 'js/materialize.js' %}"></script>
+    <script>
+        $(document).ready(function(){
+            $('select').formSelect();
+        });
+    </script>
+  </body>
+</html>
