--- a/static/css/form.css
+++ b/static/css/form.css
@@ -1,3 +1,10 @@
+body{
+  background-image: url(../images/book1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 #form{
     height: 500px;
   }
